more work on vue -classes and styles binding

--- a/section4/index.html
+++ b/section4/index.html
@@ -4,32 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>computed methods</title>
+  <link rel="stylesheet" href="style.css">
+  <title>attach css clases</title>
 </head>
 <body>
-  <!-- reacted to changes with computed methods -->
   <div id="app">
-      <!-- method app.js
-        <button @click="increase">Click Me</button>
-        <p>Counter is: {{ counter }}</p>
-        <p>Result is: {{ result }}</p>
-      -->
-      <!-- another method js
-        <button @click="increase">Click Me</button>
-        <button @click="decrease">Click Me</button>
-        <p>Counter is: {{ counter }}</p>
-        <p>Result is: {{ result }}</p>
-      -->
-      <button @click="counter++">Click Me +</button>
-      <button @click="counter--">Click Me -</button>
-      <button @click="secondCounter++"> second Click Me</button>
-      <p>Counter is: {{ counter }} | {{ secondCounter}}</p>
-      <p>Result is: {{ result() }} | {{ output }}</p>
-      <a :href="link">Some link</a>
+    <div class="demo"
+     @click="attachRed = !attachRed"
+     :class="switchClasses">1</div>
+    <!-- <div class="demo" :class="{red:attachRed, blue:!attachRed}">2</div> -->
+    <div class="demo" :class="{red:attachRed}">2</div>
+    <!-- <div class="demo" :class="changeClass">3</div> -->
+    <div class="demo" :class="[changeClass, {red:attachRed}]">3</div>
+    <hr>
+    <input type="text" v-model="changeClass">
   </div>
   <script src="vue.js"></script>
-  <!-- <script src="method-app.js"></script> -->
-  <!-- <script src="another-method-app.js"></script> -->
-  <script src="computed-app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
